
public static class AnimationStrings
{
    public const string IsMoving = "isMoving";
    public const string IsRunning = "isRunning";
    public const string IsGrounded = "isGrounded";
    public const string IsOnWall = "isOnWall";
    public const string IsOnCeiling = "isOnCeiling";
    public const string YVelocity = "yVelocity";
    public const string JumpTrigger = "jump";
    public const string AttackTrigger = "attack";
    public const string CanMove = "canMove";
    public const string HasTarget = "hasTarget";
    public const string IsAlive = "isAlive";
}
